更新文章与设置

--- a/source/_posts/ph02.md
+++ b/source/_posts/ph02.md
@@ -17,4 +17,6 @@ thumbnail: /post/ph02/DSC_0568_m.jpg
 {% asset_img DSC_0625.jpg%}
 {% asset_img DSC_0633.jpg%}
 {% asset_img DSC_0648.jpg%}
+
+[下载原图](https://pan.zsh2401.top/index.php?share/file&user=1&sid=aPuqZB9H)
 <!-- {% asset_img DSC_0673.jpg%} -->
