--- a/source/_posts/ph02.md
+++ b/source/_posts/ph02.md
@@ -3,7 +3,7 @@ title: 「捕获瞬间-02」KMUST
 date: 2019-03-16 21:46:17
 tags: [摄影,尼康,记录,闲谈,Just4Fun]
 categories: 捕获瞬间
-thumbnail: /post/ph02/DSC_0568_m.jpg
+thumbnail: /post/ph02/DSC_0568.jpg
 ---
 2019年3月14日,我在昆明理工大学随手拍了些皂片
 <!-- more -->
