--- a/source/_posts/ph02.md
+++ b/source/_posts/ph02.md
@@ -5,9 +5,10 @@ tags: [摄影,尼康,记录,闲谈,Just4Fun]
 categories: 捕获瞬间
 thumbnail: /post/ph02/DSC_0568.jpg
 ---
-2019年3月14日,我在昆明理工大学随手拍了些皂片
+2019年3月14日,我在昆明理工大学随手拍了些皂片。   
 <!-- more -->
 <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=432430716&auto=1&height=66"></iframe>
+（均为大幅度压缩后的图片，画质较差，如有需要请前往下载文末原图(共37MB)）
 {% asset_img DSC_0544.jpg%}
 {% asset_img DSC_0554.jpg%}
 {% asset_img DSC_0561.jpg%}
@@ -18,5 +19,4 @@ thumbnail: /post/ph02/DSC_0568.jpg
 {% asset_img DSC_0633.jpg%}
 {% asset_img DSC_0648.jpg%}
 
-[下载原图](https://pan.zsh2401.top/index.php?share/file&user=1&sid=aPuqZB9H)
-<!-- {% asset_img DSC_0673.jpg%} -->
+[下载原图](https://pan.zsh2401.top/index.php?share/file&user=1&sid=aPuqZB9H)   
