--- a/source/_posts/ph02.md
+++ b/source/_posts/ph02.md
@@ -10,7 +10,7 @@ thumbnail: /post/ph02/DSC_0568.jpg
 <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=432430716&auto=0&height=66"></iframe>
 （均为大幅度压缩后的图片，画质较差，如有需要请前往下载文末原图(共37MB)）
 
-<div class="justified-gallery">
+<!-- <div class="justified-gallery"> -->
 {% asset_img DSC_0544.jpg%}
 {% asset_img DSC_0554.jpg%}
 {% asset_img DSC_0561.jpg%}
@@ -20,7 +20,7 @@ thumbnail: /post/ph02/DSC_0568.jpg
 {% asset_img DSC_0625.jpg%}
 {% asset_img DSC_0633.jpg%}
 {% asset_img DSC_0648.jpg%}
-</div>
+<!-- </div> -->
 
 
 [下载原图](https://pan.zsh2401.top/index.php?share/file&user=1&sid=aPuqZB9H)   
